syntax = "proto3";

package tycho.evm.v1;

import "tycho/evm/v1/common.proto";

// A change to a pool's balance. Ambient specific.
message BalanceDelta {
  // The address of the ERC20 token whose balance changed.
  bytes pool_hash = 1;
  // The delta of the base token.
  bytes base_token_delta = 2;
  // The delta of the quote token.
  bytes quote_token_delta = 3;
  // Used to determine the order of the balance changes. Necessary for the balance store.
  uint64 ordinal = 4;
}

// Ambient pool changes within a single block
message BlockPoolChanges {
  // New protocol components added in this block
  repeated ProtocolComponent protocol_components = 1;
  // Balance changes to pools in this block
  repeated BalanceDelta balance_deltas = 2;
}
